force-app/main/default/objects/Event_Exhibitor__c/Event_Exhibitor__c.object-meta.xml
<CustomObject>
    <label>Event Exhibitor</label>
    <nameField>
        <displayFormat>EE-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Exhibitors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>