force-app/main/default/objects/Event_Exhibitor__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>IPR Leader</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>IPR Leader should be part of IPR account</errorMessage>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Event Exhibitors</relationshipLabel>
    <relationshipName>Event_Exhibitors</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>