force-app/main/default/objects/Event_Exhibitor__c/fields/Event_custom__c.field-meta.xml
<CustomField>
    <fullName>Event_custom__c</fullName>
    <label>Event custom</label>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>Event Exhibitors</relationshipLabel>
    <relationshipName>Event_Exhibitors1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>