force-app/main/default/objects/Event_Exhibitor__c/fields/Number_of_free_tickets__c.field-meta.xml
<CustomField>
    <fullName>Number_of_free_tickets__c</fullName>
    <label>Number of free tickets</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>